RESOLVED FIXED105679
[Blackberry] Static code analysis warning fixes
https://bugs.webkit.org/show_bug.cgi?id=105679
Summary [Blackberry] Static code analysis warning fixes
sfa
Reported 2012-12-22 13:03:34 PST
Klocwork issues: 959,1855, 4084
Attachments
patch for klocwork issues: 959, 1855 (5.81 KB, patch)
2012-12-22 13:36 PST, sfa
no flags
updated patch (5.79 KB, patch)
2013-01-03 08:02 PST, sfa
no flags
sfa
Comment 1 2012-12-22 13:36:08 PST
Created attachment 180607 [details] patch for klocwork issues: 959, 1855
sfa
Comment 2 2012-12-22 13:37:11 PST
klocwork issue 4084 withdrawn.
sfa
Comment 3 2013-01-02 07:32:44 PST
patch has passed EWS, needs review still.
Rob Buis
Comment 4 2013-01-02 09:02:23 PST
Comment on attachment 180607 [details] patch for klocwork issues: 959, 1855 View in context: https://bugs.webkit.org/attachment.cgi?id=180607&action=review Looks good, please fix the style nit before landing. > Source/WebCore/platform/blackberry/RenderThemeBlackBerry.cpp:171 > + if (page) { It is Webkit style to combine above two lines.
Rob Buis
Comment 5 2013-01-02 09:03:09 PST
Comment on attachment 180607 [details] patch for klocwork issues: 959, 1855 View in context: https://bugs.webkit.org/attachment.cgi?id=180607&action=review Looks good, please fix the style nit before landing. > Source/WebCore/platform/blackberry/RenderThemeBlackBerry.cpp:171 > + if (page) { It is Webkit style to combine above two lines.
sfa
Comment 6 2013-01-02 10:00:02 PST
There are two accesses to the var 'page' in the if-stmt so combining the lines wouldn't have the same semantics. The other access is the line further down: float scaleFactorFudge = 1 / page->deviceScaleFactor();
Rob Buis
Comment 7 2013-01-03 02:26:21 PST
(In reply to comment #6) > There are two accesses to the var 'page' in the if-stmt so combining the lines wouldn't have the same semantics. > > The other access is the line further down: > > float scaleFactorFudge = 1 / page->deviceScaleFactor(); I don't think that matters, page is visible in the entire scope of the if block. Can you recheck?
sfa
Comment 8 2013-01-03 08:02:08 PST
Created attachment 181177 [details] updated patch Sorry, I misunderstood which lines you wanted merged together, this patch moves the initialization of the variable into the if-expr.
Rob Buis
Comment 9 2013-01-03 23:03:46 PST
Comment on attachment 181177 [details] updated patch LGTM
WebKit Review Bot
Comment 10 2013-01-03 23:04:24 PST
Comment on attachment 181177 [details] updated patch Rejecting attachment 181177 [details] from review queue. ascian@rim.com does not have reviewer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have reviewer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
Eric Seidel (no email)
Comment 11 2013-01-04 00:40:48 PST
Comment on attachment 180607 [details] patch for klocwork issues: 959, 1855 Cleared Rob Buis's review+ from obsolete attachment 180607 [details] so that this bug does not appear in http://webkit.org/pending-commit.
WebKit Review Bot
Comment 12 2013-01-04 09:17:26 PST
Comment on attachment 181177 [details] updated patch Clearing flags on attachment: 181177 Committed r138804: <http://trac.webkit.org/changeset/138804>
WebKit Review Bot
Comment 13 2013-01-04 09:17:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.