[Blackberry] Static code analysis warning fixes https://bugs.webkit.org/show_bug.cgi?id=105679

Patch by Anthony Scian <ascian@rim.com> on 2013-01-04
Reviewed by Rob Buis.

Source/WebCore:

klocwork 1855: fixed by caching page, check against NULL and use cached value

* platform/blackberry/RenderThemeBlackBerry.cpp:
(WebCore::determineFullScreenMultiplier):

Source/WebKit/blackberry:

Klocwork issue 959: check layer against NULL since it is used in both cases
of the subsequent if-stmt

* Api/InRegionScroller.cpp:
(BlackBerry::WebKit::InRegionScrollerPrivate::calculateInRegionScrollableAreasForPoint):

Canonical link: https://commits.webkit.org/124279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138804 268f45cc-cd09-0410-ab3c-d52691b4dbfc