Source/WebKit/blackberry/Api/InRegionScroller.cpp
@@ -259,8 +259,10 @@ void InRegionScrollerPrivate::calculateInRegionScrollableAreasForPoint(const Web
 
         InRegionScrollableArea* curr = static_cast<InRegionScrollableArea*>(*rit);
         RenderLayer* layer = curr->layer();
+        if (!layer)
+            continue;
 
-        if (layer && layer->renderer()->isRenderView()) { // #document case
+        if (layer->renderer()->isRenderView()) { // #document case
             FrameView* view = toRenderView(layer->renderer())->frameView();
             ASSERT(view);
             ASSERT(canScrollInnerFrame(view->frame()));
